@@ -3033,6 +3033,59 @@
   (with-temp-buffer
     (should-equal (take 3 (widget-create 'key)) '(key :value ""))))
 
+(ert-deftest compat-drop-while ()
+  (should (equal (drop-while #'hash-table-p nil) nil))
+  (let ((ls (append '(3 2 1) '(0) '(-1 -2 -3))))
+    (should (equal (drop-while #'plusp ls) '(0 -1 -2 -3)))
+    (should (equal (drop-while (lambda (x) (plusp x)) ls) '(0 -1 -2 -3)))
+    (let ((z 1))
+      (should (equal (drop-while (lambda (x) (> x z)) ls) '(1 0 -1 -2 -3))))
+    (should (equal (drop-while #'bufferp ls) ls))
+    (should (equal (drop-while #'numberp ls) nil))
+    (should (equal (funcall (identity #'drop-while) #'plusp ls)
+                   '(0 -1 -2 -3)))))
+
+(ert-deftest compat-take-while ()
+  (should (equal (take-while #'hash-table-p nil) nil))
+  (let ((ls (append '(3 2 1) '(0) '(-1 -2 -3))))
+    (should (equal (take-while #'plusp ls) '(3 2 1)))
+    (should (equal (take-while (lambda (x) (plusp x)) ls) '(3 2 1)))
+    (let ((z 1))
+      (should (equal (take-while (lambda (x) (> x z)) ls) '(3 2))))
+    (should (equal (take-while #'bufferp ls) nil))
+    (should (equal (take-while #'numberp ls) ls))
+    (should (equal (funcall (identity #'take-while) #'plusp ls)
+                   '(3 2 1)))))
+
+(ert-deftest compat-all ()
+  (should (equal (all #'hash-table-p nil) t))
+  (let ((ls (append '(3 2 1) '(0) '(-1 -2 -3))))
+    (should (equal (all #'numberp ls) t))
+    (should (equal (all (lambda (x) (numberp x)) ls) t))
+    (should (equal (all #'plusp ls) nil))
+    (should (equal (all #'bufferp ls) nil))
+    (let ((z 9))
+      (should (equal (all (lambda (x) (< x z)) ls) t))
+      (should (equal (all (lambda (x) (> x (- z 9))) ls) nil))
+      (should (equal (all (lambda (x) (> x z)) ls) nil)))
+    (should (equal (funcall (identity #'all) #'plusp ls) nil))
+    (should (equal (funcall (identity #'all) #'numberp ls) t))))
+
+(ert-deftest compat-any ()
+  (should (equal (any #'hash-table-p nil) nil))
+  (let ((ls (append '(3 2 1) '(0) '(-1 -2 -3))))
+    (should (equal (any #'numberp ls) ls))
+    (should (equal (any (lambda (x) (numberp x)) ls) ls))
+    (should (equal (any #'plusp ls) ls))
+    (should (equal (any #'zerop ls) '(0 -1 -2 -3)))
+    (should (equal (any #'bufferp ls) nil))
+    (let ((z 9))
+      (should (equal (any (lambda (x) (< x z)) ls) ls))
+      (should (equal (any (lambda (x) (< x (- z 9))) ls) '(-1 -2 -3)))
+      (should (equal (any (lambda (x) (> x z)) ls) nil)))
+    (should (equal (funcall (identity #'any) #'minusp ls) '(-1 -2 -3)))
+    (should (equal (funcall (identity #'any) #'stringp ls) nil))))
+
 (ert-deftest compat-hash-table-contains-p ()
   (let ((h (make-hash-table :test #'equal)))
     (puthash :foo t h)
